wip: added analitics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "f7e1cf16e8824e11ad0f9c72b44084f9"}'
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carla Paiva</title>
   </head>
