fix: ul items and missing meta tags

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carla Paiva</title>
+    <meta
+      name="description"
+      content="Carla Paiva is a software developer with 6+ years of experience building web applications using React, .NET, and cloud services."
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Carla Paiva — Software Developer" />
+    <meta
+      property="og:description"
+      content="Software developer with 6+ years of experience building web applications with React, .NET, and cloud services."
+    />
+    <meta property="og:url" content="https://carlapaiva.com" />
   </head>
   <body>
     <div id="root"></div>
